// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationitemComponent can become active 1`] = `
<div
  id="root1"
>
  <button
    aria-label="Navigate to Add Song"
    ngbnavlink=""
  >
     Add Song

  </button>
</div>
`;

exports[`NavigationitemComponent can become active based on the URL 1`] = `
<div
  id="root2"
>
  <button
    aria-label="Navigate to Add Song"
    ngbnavlink=""
  >
     Add Song

  </button>
</div>
`;

exports[`NavigationitemComponent can become active based on the URL 2`] = `
<div
  id="root2"
>
  <button
    aria-label="Navigate to Add Song"
    class="active"
    ngbnavlink=""
  >
     Add Song

  </button>
</div>
`;

exports[`NavigationitemComponent should match snapshot 1`] = `
<div
  id="root0"
>
  <button
    aria-label="Navigate to Add Song"
    ngbnavlink=""
  >
     Add Song

  </button>
</div>
`;
